--- a/lab/repita/camps/immo/prefa.html
+++ b/lab/repita/camps/immo/prefa.html
@@ -97,7 +97,7 @@ Prima lettera all'EuroParlamento
 Questa non è più solo una ristretta campagna socio/politica.<br>
 Il <b>D.P.R.380/2001</b> si inserisce ormai in una ben più ampia 
 <b><a class="none" href="../../index.htm" target="cc">iniziativa culturale</a></b>.<br>
-Abomini del genere evidenziano la permasta tirannide e contribuiscono a farla cadere.
+Abomini del genere evidenziano la <b><a class="none" href="../../rede/tirannide.html" target="cc">permasta tirannide</a></b> e contribuiscono a farla cadere.
 
 </div>
 
