--- a/lab/repita/rede/rede_1.html
+++ b/lab/repita/rede/rede_1.html
@@ -44,7 +44,7 @@
 
 <br><br>
 
-<div style="font-family='Adwaita Sans, sans-serif'; font-size: 28px;">
+<div style="font-size: 28px;">
 
 Si definisce Democrazia quell'ordinamento sociale in cui il Popolo si erge a Sovrano e dà vita a una Repubblica: una comproprietà nazionale costituita da codici, enti e istituzioni, da beni, proprietà e risorse, da impieghi, poteri e redditi. Un patrimonio comune, economico, giuridico, politico, da curare solidalmente e godere paritariamente. In contemporanea, se quella specifica parte di res publica lo permette: come nel caso di un giardino pubblico. O susseguendosi l'un l'altro pro tempore: come necessita in un pubblico impiego, potere, ruolo, per mantenere la proprietà del bene in capo al Popolo.
 
