--- a/lab/repita/rede/rede_2.html
+++ b/lab/repita/rede/rede_2.html
@@ -44,7 +44,7 @@
 
 <br><br>
 
-<div style="font-family='Adwaita Sans, sans-serif'; font-size: 28px;">
+<div style="font-size: 28px;">
 
 Democrazia è situazione contraria alla tirannide: impero, monarchia, principato, etc. Nella tirannide il Popolo è soggiogato dai pochi che detengono perennemente la centralità. Nella Democrazia i cittadini dispongono invece di una centralità pubblica: la Repubblica, e possono accedervi tramite un Istituto (la Banca dei Pubblici Impieghi) che periodicamente la redistribuisce, sempre mantenendo piena competenza, idoneità e preparazione. Chiunque può svolgere vita pubblica attiva e farsi costruttore del proprio destino. La società ne guadagna godendo di un'ampia visione, arricchita da ognuno, in grado di farle cogliere ogni opportunità e superare tutti gli ostacoli.
 
