--- a/lab/repita/rede/rede_4.html
+++ b/lab/repita/rede/rede_4.html
@@ -44,7 +44,7 @@
 
 <br><br>
 
-<div style="font-family='Adwaita Sans, sans-serif'; font-size: 28px;">
+<div style="font-size: 28px;">
 
 Si comprende l'importanza dell'ordinamento sociale, osservando il comportamento degli esseri viventi. Due fondamentalmente sono i tipi di formazione: un gregge di pecore, una mandria di bovini, oppure uno stormo di uccelli, un banco di pesci. L'organizzazione col pastore/tiranno avanti, con animali che tengono insieme il gregge o la mandria, hanno finalità univoca, implacabile, inevitabile. Nessun pastore/tiranno conduce il suo gregge, la sua mandria, verso altra apoteosi che non sia quella della propria personale soddisfazione. Vi possono essere anche "buoni" pastori/tiranni, che lasciano vivere soddisfacentemente il loro gregge, la loro mandria. Ma il percorso di queste non cambia.
 
