--- a/lab/repita/rede/rede_5.html
+++ b/lab/repita/rede/rede_5.html
@@ -44,7 +44,7 @@
 
 <br><br>
 
-<div style="font-family='Adwaita Sans, sans-serif'; font-size: 28px;">
+<div style="font-size: 28px;">
 
 E poi vi sono gli stormi di uccelli, i banchi di pesci. In queste formazioni ogni individuo ha possibilità di esprimersi, i suoi simili potendolo seguire non essendoci alcuna fissità od irrigidimento. Stormi di uccelli e banchi di pesci si muovono con spontaneità, senza forzature, senza cani e pastori che li mantengano lungo un percorso obbligato. Stormi di uccelli e banchi di pesci sono sempre pronti a reagire, grazie alla sensibilità ed all'apporto di ogni individuo, per cogliere un'opportunità o per sfuggire ad una minaccia. Mentre gli individui di greggi e mandrie sono sempre ingabbiati e periscono prematuramente, gli individui di stormi e banchi vivono liberi e possono perfino lasciare il gruppo.
 
