--- a/lab/repita/rede/rede_6.html
+++ b/lab/repita/rede/rede_6.html
@@ -44,7 +44,7 @@
 
 <br><br>
 
-<div style="font-family='Adwaita Sans, sans-serif'; font-size: 28px;">
+<div style="font-size: 28px;">
 
 Infinite obiezioni nascono al solo immaginare una riconversione societaria umana che considera come modelli greggi e mandrie, stormi e banchi. Ma va considerato pure che la semplicità della natura non è mai stata superficiale, tanto da essere schema universale. E convertire i nostri ammassi, da greggi/mandrie a stormi/banchi, apprendere e mettere in pratica con profitto, per i singoli e l'insieme, il senso di entrambe le strutture, divenire capaci di prendere, consapevolmente, la forma più funzionale in base alla situazione che si sta vivendo, era, è e rimarrà sempre processo di primaria importanza.
 
