--- a/lab/repita/index.htm
+++ b/lab/repita/index.htm
@@ -92,9 +92,9 @@
 <font face="verdana" color="#004000" size="3">
 
 <a class="noline" href="../eulab/index.htm" target="elb">eulab</a>
-<img src="blank.gif" width="77pt" height="1pt">
-<a class="noline" href="../bottega/index.htm" target="bottega">! hurrah !</a>
-<img src="blank.gif" width="77pt" height="1pt">
+<img src="blank.gif" width="77pt" height="1pt"> <!--
+<a class="noline" href="../bottega/index.htm" target="bottega">hurrah</a>
+<img src="blank.gif" width="77pt" height="1pt"> -->
 <a class="noline" href="../index.htm" target="hpr">hyper</a>
 
 </font>
