--- a/lab/repubblica/3.html
+++ b/lab/repubblica/3.html
@@ -19,21 +19,25 @@ a:hover{text-decoration:underline}
 
 <div class="box">
 
-  <p>In sintesi: si vive in Democrazia se il Popolo gode di una Repubblica. Se è presente una Banca dei Pubblici Impieghi (nella quale chiunque possa iscriversi e prenotarsi per fornire il proprio contributo) che permetta il periodico, regolare rinnovo del personale gestente la cosa pubblica. Se questo Istituto non è vigente, tanto la "democrazia" che la "repubblica", pur dichiarate, pur sbandierate, sono fittizie. Trattasi di forme mantenute confuse, intermedie, spurie, da coloro che, godendo di indebiti privilegi, non vogliono rinunciarvi e si servono di ogni ente in loro possesso, in primis educativi ed informativi, per mantenere il Popolo inconsapevole e succube. Continua a breve con tutto il repertorio di trent'anni di lavoro ...</p>
+  <p>In sintesi: si vive in Democrazia se il Popolo gode di una Repubblica. Se è presente una Banca dei Pubblici Impieghi (nella quale chiunque possa iscriversi e prenotarsi per fornire il proprio contributo) che permetta il periodico, regolare rinnovo del personale gestente la cosa pubblica. Se questo Istituto non è vigente, tanto la "democrazia" che la "repubblica", pur dichiarate, pur sbandierate, sono fittizie. Trattasi di forme mantenute confuse, intermedie, spurie, da coloro che, godendo di indebiti privilegi, non vogliono rinunciarvi e si servono di ogni ente in loro possesso, in primis educativi ed informativi, per mantenere il Popolo inconsapevole e succube. Ed ora approfondiamo, procediamo.</p>
+
+<!--
+
+ Continua a breve con tutto il repertorio di trent'anni di lavoro ...
 
   <div class="nav">
 <br><br><b><a href="../repita/camps/immo/prefa.html">D.P.R. 380/2001</a></b>
   </div>
 
-<!--
+-->
+
   <div class="nav">
     <a href="2.html">&lt; 2</a>
     <span class="spacer"></span>
     3
     <span class="spacer"></span>
-    <a href="4.html">4 &gt;</a>
+    <a href="index_1.html">4 &gt;</a>
   </div>
--->
 
 </div>
 
