--- a/lab/repita/camps/immo/prefa.html
+++ b/lab/repita/camps/immo/prefa.html
@@ -95,9 +95,10 @@ Prima lettera all'EuroParlamento
 <div style="font-size: 24px; padding: 12px; display: inline-block;">
 
 Questa non è più solo una ristretta campagna politica.<br>
-Il <b>D.P.R. 380/2001</b> si inserisce ormai in una ben più ampia 
+Il <b>D.P.R. 380/2001</b> si inserisce in una ben più ampia 
 <b><a class="none" href="../../../repubblica/1.html" target="cc">iniziativa culturale, politica, societaria</a></b>.<br>
-Abomini del genere evidenziano la <b><a class="none" href="../../rede/tirannide.html" target="cc">permasta tirannide</a></b> e contribuiscono a farla cadere.
+Abomini del genere evidenziano la <b><a class="none" href="../../../repubblica/tirannide.html" target="cc">permasta tirannide</a></b> e 
+contribuiscono a farla cadere.
 
 </div>
 
