--- a/lab/repubblica/index_1.html
+++ b/lab/repubblica/index_1.html
@@ -8,10 +8,11 @@
 body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:1rem;background:#fff;font-family:serif;font-size: clamp(18px, 1.2vw + 1rem, 22px)}
 .box{width:100%;max-width:60rem;text-align:left}
 h1{font-size:2.2em;margin:0 0 2rem 0}
-p{font-size:1.4em;line-height:1.5;margin:0 0 3rem 0}
+p{font-size:1em;line-height:1.5;margin:0 0 3rem 0}
 .nav{text-align:center;font-size:1.4em}
 a{color:#000;text-decoration:none}
 a:hover{text-decoration:underline}
+.index{text-align:center;font-size:1.4em;font-weight:bold;margin-top:7rem;margin-bottom:1rem;display:block;}
 .spacer{display:inline-block;width:4rem}
 </style>
 </head>
@@ -23,21 +24,37 @@ a:hover{text-decoration:underline}
 
 <div class="nav">
 
-<a href="rep_dem_1.html">La più gran truffa della Storia</a>
+<p>
 
-<br><br>
+<a href="truffa.html">La più gran truffa della Storia</a>
 
-<a href="rep_dem_1.html">La più gran truffa della Storia</a>
+</p><p>
 
-<br><br>
+<a href="liberazione.html">Una liberazione ancora tutta da fare</a>
 
-<a href="rep_dem_1.html">La più gran truffa della Storia</a>
+</p><p>
 
-<br><br><br><br><br><br>
+<a href="costituenti.html">Per Nuovi Padri Costituenti</a>
 
-<b><a href="../repita/camps/immo/index.html">D.P.R. 380/2001</a></b>
+</p><p>
+
+<a href="senso.html">Il senso della vita nel senso delle parole</a>
+
+</p><p>
+
+<a href="dna.html">Cambiamo DNA alle nostre società</a>
+
+</p><p>
+
+continua a breve<br>col lavoro di oltre trent'anni
+
+</p><p>
 
 </div>
+
+  <div class="index">
+<a href="../repita/camps/immo/prefa.html">D.P.R. 380/2001</a>
+  </div>
 
 </div>
 
