--- a/lab/repubblica/truffa.html
+++ b/lab/repubblica/truffa.html
@@ -2,16 +2,20 @@
 <html lang="it">
 <head>
 <meta charset="UTF-8">
+<meta property="og:title" content="Opere d’Arte di Danilo D’Antonio">
+<meta property="og:description" content="La più gran truffa della storia – Danilo D’Antonio">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="it_IT">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Opere d'Arte di Danilo D'Antonio</title>
 <style>
 body{margin:0;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:1rem;background:#fff;font-family:serif;font-size: clamp(18px, 1.2vw + 1rem, 22px)}
-.box{width:100%;max-width:60rem;text-align:left}
-h1{font-size:2em;margin:0 0 2rem 0}
+.box{width:100%;max-width:60rem;text-align:left;padding-top:5rem;padding-bottom:5rem;}
+h1{font-size:2em;margin:1rem 0 4rem 0}
 p{font-size:1.2em;line-height:1.5;margin:0 0 3rem 0}
-.nav{text-align:center;font-size:1.4em}
 a{color:#000;text-decoration:none}
 a:hover{text-decoration:underline}
+.index{text-align:center;font-size:1.4em;font-weight:bold;margin-top:5rem;margin-bottom:1rem;display:block;}
 .spacer{display:inline-block;width:4rem}
 </style>
 </head>
@@ -19,45 +23,40 @@ a:hover{text-decoration:underline}
 
 <div class="box">
 
-<br><br>
-
 <h1>LA PIÙ GRAN TRUFFA DELLA STORIA</h1>
-
-<br>
 
   <p>
 
 Alla fine della seconda guerra mondiale, abbattuta la tirannide ed abbracciata la Democrazia, l'Italia ed altri Paesi avrebbero subito dovuto bonificare gli apparati del caduto stato monarchico dagli assunti a vita, dai burocrati, dai carrieristi. Il subentro della Democrazia trasferiva la proprietà della centralità nelle mani del Popolo divenuto Sovrano creando la Res Publica. Innanzitutto il pubblico impiego (quindi ognuno dei tanti poteri trasferiti alla cittadinanza) avrebbe dovuto aprirsi alla partecipazione a tempo determinato di chiunque, dotato dei requisiti necessari, idoneo e competente, avesse voluto apportare un proprio contributo alla vita pubblica, venendone pure retribuito.
 
-<br><br>
+  </p><p>
 
 Così come del resto già avveniva nel potere legislativo.
 
-<br><br>
+  </p><p>
 
 La Democrazia si realizza infatti non col voto ma col mandato temporaneo. Il voto consegue la temporaneità, non esisterebbe di per sé. I carrieristi (monarchi in ogni pubblico ruolo, perenni detentori dell'intera montagna dei poteri, apice legislativo a parte e spesso anche di questo) hanno accuratamente evitato di chiarire la ben diversa consistenza di una Democrazia da imperi, monarchie e tirannidi in genere. Padroni della cultura, educazione ed informazione, nessun suddito sfuggì loro e tutti vennero inculcati. S'è mantenuto così un subdolo sistema che agevolmente pilota una maggioranza estromessa dalla centralità, realizzando le volontà di ogni cricca, elite, gruppo e lobby.
 
-<br><br>
+  </p><p>
 
 E poiché il resto del mondo considera l'Italia e l'Europa un gran riferimento culturale, l'intera Umanità continua ancora oggi a rimanere prigioniera (pur in un'epoca così avanzata tecnologicamente) di situazioni politiche e sociali, locali e globali, arretrate e tiranne. Le stesse guerre, repressioni e violenze, originantesi da queste. Oggi è certo difficile immaginare l'immensa meraviglia del mondo ben fatto che è stato impedito nascesse. Tant'è: non è forse vero che il mondo diviene quel che chi l'abita merita? Ed infatti si ha ancora facoltà di scegliere se mantenersi come si è od evolvere. Chiarezza, precisione, sintesi possono ancora salvare l'Umanità, ma solo se essa si mostrerà umile davanti ad esse e le farà proprie.
 
-<br><br>
+  </p><p>
 
 Auguri dunque e buon lavoro!
 
-<br><br>
+  </p><p>
 
-Danilo D'Antonio, grossista d'idee<br>
-Intelligenza Biologica<br>
+Danilo D'Antonio<br>
+grossista d'idee, intelligenza biologica<br>
 del Laboratorio Eudemonia
 
   </p>
 
-<br>
-
-  <div class="nav">
-    <b><a href="4.html">index</a></b><br><br><br>
+  <div class="index">
+    <a href="index_1.html">index</a>
   </div>
+
 </div>
 
 </body>
