--- a/lab/repita/camps/immo/prefa.html
+++ b/lab/repita/camps/immo/prefa.html
@@ -1,5 +1,5 @@
 
-<html>
+<!doctype html>
 
 <head>
 <meta charset="UTF-8">
@@ -62,8 +62,6 @@ Qui si richiama dunque i legislatori ad una immediata riforma del D.P.R. 380/200
 
 Lettere alle Autorità italiane
 
-<br>
-
 <b><a class="none" href="italia.html">Quarant'anni di troppo!</a></b>
 
 </div>
@@ -84,21 +82,16 @@ Lettere alle Autorità italiane
 
 Prima lettera all'EuroParlamento
 
-<br>
-
 <b><a class="none" href="euro_1.html">Un'eco storica dall'Italia</a></b>
 
 </div>
 
 </td></tr></table>
 
-<div style="font-size: 24px; padding: 12px; display: inline-block;">
+<div style="font-size: 24px; padding: 12px; display: inline-block; max-width: 60rem;">
 
-Questa non è più solo una ristretta campagna politica.<br>
-Il <b>D.P.R. 380/2001</b> si inserisce in una ben più ampia 
-<b><a class="none" href="../../../repubblica/1.html" target="cc">iniziativa culturale, politica, societaria</a></b>.<br>
-Abomini del genere evidenziano la <b><a class="none" href="../../../repubblica/tirannide.html" target="cc">permasta tirannide</a></b> e 
-contribuiscono a farla cadere.
+Questa non è più solo una ristretta campagna politica. Il <b>D.P.R. 380/2001</b> si inserisce in una ben più ampia 
+<b><a class="none" href="../../../repubblica/1.html" target="cc">iniziativa culturale, politica, societaria</a></b>. Abomini del genere evidenziano la <b><a class="none" href="../../../repubblica/tirannide.html" target="cc">permasta tirannide</a></b> e contribuiscono a farla cadere.
 
 </div>
 
