--- a/lab/tec/dt/index.html
+++ b/lab/tec/dt/index.html
@@ -62,9 +62,7 @@ a:active {
 
 This is the <a href="new_era.html">New Terrestrial Era</a>, <a href="septennia.html"><span id="risult_1"></span></a>, <a href="tec_logo.html"><span id="risult_2"></span></a>
 
-</a>
-
-<script language="JavaScript" src="septen_0.js"></script></a>
+<script language="JavaScript" src="septen_0.js"></script>
 
 </div>
 
