--- a/lab/repita/camps/immo/prefa.html
+++ b/lab/repita/camps/immo/prefa.html
@@ -58,7 +58,7 @@ Qui si richiama dunque i legislatori ad una immediata riforma del D.P.R. 380/200
 
 <table width="100%" colspan="2" cellpadding="48pt"><tr><td width="40%" align="center" valign="middle">
 
-<div style="background-color: #F8F8F8; font-size: 28px; padding: 24px;">
+<div style="background-color: #F8F8F8; font-size: 20pt; padding: 24px;max-width:100%;overflow-wrap:break-word;">
 
 Lettere alle Autorità italiane
 
@@ -68,7 +68,7 @@ Lettere alle Autorità italiane
 
 </td><td width="20%" align="center" valign="middle">
 
-<div style="background-color: #F8F8F8; font-size: 28px; padding: 24px;">
+<div style="background-color: #F8F8F8; font-size: 20pt; padding: 24px;max-width:100%;overflow-wrap:break-word;">
 
 <b><a class="none" href="dossier_dpr.pdf">sintesi</a></b>
 
@@ -78,7 +78,7 @@ Lettere alle Autorità italiane
 
 </td><td width="40%" align="center" valign="middle">
 
-<div style="background-color: #F8F8F8; font-size: 28px; padding: 24px;">
+<div style="background-color: #F8F8F8; font-size: 20pt; padding: 24px;max-width:100%;overflow-wrap:break-word;">
 
 Prima lettera all'EuroParlamento
 
@@ -106,9 +106,9 @@ Questa non è più solo una ristretta campagna politica. Il <b>D.P.R. 380/2001</
 </div>
 
 <div style="font-size: 18px;">
-email: dda@hyperlinker.org - PEC: danilo.dantonio@domicilio.online
+<a class="none" href="mailto:dda@hyperlinker.org">email</a>, <a class="none" href="mailto:danilo.dantonio@domicilio.online">PEC</a> & smart: (solo WSP) 339 5014947
 <br>
-smart: (solo WSP) 339 5014947
+<a class="none" href="dir_lic.html" target="diritti_licenza">Diritti d'Autore e Licenza d'Utilizzo</a>
 </div>
 </i>
 
