--- a/lab/tec/dt/index.html
+++ b/lab/tec/dt/index.html
@@ -19,7 +19,7 @@
         }
         .centered {
             text-align: center;
-            font-family: times Roman; font-weight: bold;
+            font-weight: bold;
         }
 a {
     color: black;
@@ -29,8 +29,8 @@ a:visited {
     color: black;
 }
 a:hover {
-    color: gray;
-    text-decoration: none;
+    color: black;
+    text-decoration: underline;
 }
 a:active {
     color: black;
@@ -62,14 +62,14 @@ a:active {
 
 This is the <a href="new_era.html">New Terrestrial Era</a>, <a href="septennia.html"><span id="risult_1"></span></a>, <a href="tec_logo.html"><span id="risult_2"></span></a>
 
-<script language="JavaScript" src="septen_0.js"></script>
+<script src="septen_0.js"></script>
 
 </div>
 
 <div style="font-size: 36px;">
 
-<span style="font-size: 36px;"><SCRIPT language="JavaScript" src="tec_date.js"></SCRIPT></span>
-<span style="font-size: 34px;"><SCRIPT language="JavaScript" src="random_hp.js"></SCRIPT></span>
+<span style="font-size: 36px;"><SCRIPT src="tec_date.js"></SCRIPT></span>
+<span style="font-size: 34px;"><SCRIPT src="random_hp.js"></SCRIPT></span>
 
 </div>
 
@@ -96,7 +96,7 @@ This is the <a href="new_era.html">New Terrestrial Era</a>, <a href="septennia.h
 
 <br><br><br><br>
 
-<i><a href="../legal.htm">Copyright and trademark</a> <a href="../../eulab/index.htm">Laboratorio Eudemonia</a> - Created by <a href="../../index.html">HyperLinker</a> - <a href="mailto:info@hyperlinker.org">Contact</a> - <a href="api.html">APIs</a> and <a href="../agenda/index.html">Agenda</a> available soon</i>
+<i><a href="../legal.htm">Copyright and trademark</a> <a href="../../eulab/index.htm">Laboratorio Eudemonia</a><br>Created by <a href="../../index.html">HyperLinker</a> - <a href="mailto:info@hyperlinker.org">Contact</a> - <a href="../agenda/index.html">Agenda</a> and <a href="api.html">APIs</a> (man at work)</i>
 
 </div>
 
