--- a/lab/tec/dt/new_era.html
+++ b/lab/tec/dt/new_era.html
@@ -29,8 +29,8 @@ a:visited {
     color: black;
 }
 a:hover {
-    color: gray;
-    text-decoration: none;
+    color: black;
+    text-decoration: underline;
 }
 a:active {
     color: black;
@@ -40,13 +40,13 @@ a:active {
 </head>
 <body>
 
-<div class="centered" style="width: 60%; margin: 0 auto; margin-top: -80px; font-size: 36px;">
+<div class="centered" style="width: 60%; margin: 0 auto; margin-top: -80px; font-size: 32px;">
 
 It seems everything has a beginning and an end, and so too a long period, which lasted well beyond what was necessary, has ended. The Old Era disappeared with the first human landing on the Moon and with the birth of the first nodes of the Internet. And today it is clear that everything that was believed and imposed before must now be reviewed through the eyes of free knowledge.
 
 </div>
 
-<div style="font-size: 111px; position: fixed; bottom: 48px; width: 100%; text-align: center;">
+<div style="font-size: 99px; position: fixed; bottom: 48px; width: 100%; text-align: center;">
 
 <a href="index.html">&#9660;</a>
 
