--- a/lab/tec/dt/septennia.html
+++ b/lab/tec/dt/septennia.html
@@ -29,8 +29,8 @@ a:visited {
     color: black;
 }
 a:hover {
-    color: gray;
-    text-decoration: none;
+    color: black;
+    text-decoration: underline;
 }
 a:active {
     color: black;
@@ -40,13 +40,13 @@ a:active {
 </head>
 <body>
 
-<div class="centered" style="width: 64%; margin: 0 auto; margin-top: -80px; font-size: 36px;">
+<div class="centered" style="width: 64%; margin: 0 auto; margin-top: -80px; font-size: 32px;">
 
 The time reckoning of the New Terrestrial Era begins with 1969, the Year Zero. Therefore, <span id="settennioCardinale"></span> septennia have elapsed since then, and we are now in the <span id="settennioOrdinale"></span>. It is named Septennium <span id="settennioSimbolo"></span> in observance of the general rhythmic evocations of this Calendar, following the order illustrated in it's <a href="tec_logo.html">logo</a>.
 
 </div>
 
-<div style="font-size: 111px; position: fixed; bottom: 48px; width: 100%; text-align: center;">
+<div style="font-size: 99px; position: fixed; bottom: 48px; width: 100%; text-align: center;">
 
 <a href="index.html">&#9660;</a>
 
