--- a/lab/tec/dt/tec_logo.html
+++ b/lab/tec/dt/tec_logo.html
@@ -29,8 +29,8 @@ a:visited {
     color: black;
 }
 a:hover {
-    color: gray;
-    text-decoration: none;
+    color: black;
+    text-decoration: underline;
 }
 a:active {
     color: black;
@@ -55,17 +55,17 @@ a:active {
 
 <div style="flex-grow: 1; padding-right: 48px; text-align: right;">
 
-<i>The Earth Calendar</i> uses a special nomenclature to designate its main time divisions: the days, the years, and the septennia. Its logo expresses this approach.
+<i><a href="../index.htm">The Earth Calendar</a></i> uses a special nomenclature to designate its main time divisions: the days, the years, and the septennia. Its logo expresses this approach.
     
 </div>
 
 <div style="flex-shrink: 0;">
-<img src="tec_logo.svg" alt="Logo" style="height: 333px; width: auto; display: block;">
+<a href="../legal.htm"><img src="tec_logo.svg" alt="Logo" style="height: 333px; width: auto; display: block;"></a>
 </div>
 
 </div>
 
-<div style="font-size: 111px; position: fixed; bottom: 48px; width: 100%; text-align: center;">
+<div style="font-size: 99px; position: fixed; bottom: 48px; width: 100%; text-align: center;">
 
 <a href="index.html">&#9660;</a>
 
