--- a/lab/tec/dt/epoch.html
+++ b/lab/tec/dt/epoch.html
@@ -28,8 +28,8 @@ a:visited {
     color: black;
 }
 a:hover {
-    color: gray;
-    text-decoration: none;
+    color: black;
+    text-decoration: underline;
 }
 a:active {
     color: black;
@@ -39,13 +39,17 @@ a:active {
 </head>
 <body>
 
-<div class="centered" style="width: 69%; margin: 0 auto; margin-top: -80px; font-size: 35px;">
+<div class="centered" style="width: 69%; margin: 0 auto; margin-top: -80px; font-size: 30px;">
 
-__ <span id="epoch"></span> __ is the number of seconds that have elapsed since midnight on 31/12/1969, year of the Old Era, marking the beginning of Year 1 of the New Terrestrial Era. This is the time as measured by computers, smartphones, machines, and Robots. Yet, it is also the time of Humans who wish to continue their lives in an age when they are no longer alone on Earth. Since this value is expressed in seconds, we cannot interpret it directly. Behold, <i><a href="../../tec/index.htm">The Earth Calendar</a></i>, which allows us access to the time of the New Era, presented in a format more familiar to us humans.
+__ <span id="epoch"></span> __
+
+<br><br>
+
+The above is the number of seconds that have elapsed since midnight on 31/12/1969, year of the Old Era, marking the beginning of Year 1 of the <a href="new_era.html">New Terrestrial Era</a>. This is the time as measured by computers, smartphones, machines, and Robots. Yet, it is also the time of Humans who wish to continue their lives in an age when they are no longer alone on Earth. Since this value is expressed in seconds, we cannot interpret it directly. Behold, <i><a href="../../tec/index.htm">The Earth Calendar</a></i>, which allows us access to the time of the New Era, presented in a format more familiar to us humans.
 
 </div>
 
-<div style="font-size: 111px; position: fixed; bottom: 48px; width: 100%; text-align: center;">
+<div style="font-size: 99px; position: fixed; bottom: 48px; width: 100%; text-align: center;">
 
 <a href="index.html">&#9660;</a>
 
