--- a/lab/repita/camps/immo/dir_lic.html
+++ b/lab/repita/camps/immo/dir_lic.html
@@ -33,7 +33,7 @@ a:hover{text-decoration:underline}
 
 <br><br>
 
-Il progetto “Banca dei Pubblici Impieghi”, cui qui si fa cenno, è invece rilasciato sotto speciale licenza. Testo disponibile a breve sui siti della BdPI. 
+Il progetto “Banca dei Pubblici Impieghi”, cui qui si fa cenno, è invece rilasciato sotto speciale licenza per l'attuazione ufficiale su di un territorio e soggetto a pagamento di una royalty al suo Autore. 
 </p>
 
 <br>
