--- a/lab/repubblica/costituenti.html
+++ b/lab/repubblica/costituenti.html
@@ -59,26 +59,34 @@ Generazioni di giovani continuano a venire su privi non solo di questa consapevo
 
   </p><p>
 
-Per nulla grati ai padri costituenti di un tempo, semplici rinominanti "repubblica" la vecchia centralità monarchica esistente, per il superficiale sprone che ci lasciarono (*), ben ne vengano di nuovi. Seri e che realizzino per davvero l'opera!
+Per nulla grati ai padri costituenti di un tempo, semplici rinominanti "repubblica" la vecchia centralità monarchica esistente, per il superficiale sprone che ci lasciarono (*), ben giungano di nuovi. Che davvero realizzino l'opera!
 
-  </p><p>
+  </p>
 
-Danilo D'Antonio<br>
+<br>
+
+<div style="font-size:1.2em; text-align:right">
+
+<a href="../hl_it.htm" target="dda">Danilo D'Antonio</a><br>
 grossista d'idee, intelligenza biologica<br>
-del Laboratorio Eudemonia
+del <a href="../eulab/index.htm" target="eulab">Laboratorio Eudemonia</a>
 
-  </p><p>
+</div>
+
+<br><br><br>
+
+<p>
 
 (*) "... E' compito della Repubblica rimuovere gli ostacoli di ordine economico e sociale, che, limitando di fatto la libertà e l'eguaglianza dei cittadini, impediscono il pieno sviluppo della persona umana e l'effettiva partecipazione di tutti i lavoratori all'organizzazione politica, economica e sociale del Paese ..."
 
   </p><p>
 
-Parole più eteriche, inconsistenti, vaghe non le potevano concepire. Quando avrebbero dovuto dirci esplicitamente: Democrazia esige che la centralità sia comproprietà condivisa (la Repubblica) ecco quindi la Banca dei Pubblici Impieghi. Vanno via i tiranni e giungono cittadini idonei che democraticamente si succedono pro tempore. Perché non conta tanto chi governa quanto chi sta intorno a chi governa. Questo avrebbero dovuto dirci! Se non avessero assorbito silenti tanta gloria, onori e riconoscimenti, si poteva pure ricordarli con una punta di simpatia. Ma non lo si può più fare, avendoci lasciato una Repubblica tutta da costruire, senza dire che il grosso del lavoro era da fare, ancora oggi il loro nome venendo usato per oscurare chi quell'immenso lavoro se lo sta sobbarcando da trent'anni tutto da solo.
+Parole più eteriche, inconsistenti, vaghe non si potevano concepire. Quando si sarebbe dovuto dire esplicitamente: Democrazia esige che la centralità sia una comproprietà condivisa, la Repubblica per l'appunto. Da cui deriva subito la Banca dei Pubblici Impieghi. Vanno via i tiranni e giungono cittadini competenti ed idonei che si susseguono pro tempore fraternamente. Perché non conta tanto chi governa quanto chi sta intorno a chi governa. Questo avrebbero dovuto dirci. Se non avessero assorbito silenti tanta gloria, onori e riconoscimenti, si poteva pure ricordarli con una punta di simpatia. Ma non lo si può più fare, avendoci lasciato una Repubblica tutta da costruire, ancora oggi il loro nome venendo usato per oscurare e tacitare chi quell'immenso lavoro di concepimento e divulgazione se lo sta sobbarcando tutto da solo da trent'anni.
 
   </p>
 
   <div class="index">
-    <a href="index_1.html">index</a>
+    <a href="index_1.html">___ La REPUBBLICA di SENSO COMPIUTO ___</a>
   </div>
 
 </div>
