--- a/lab/repubblica/index.html
+++ b/lab/repubblica/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Corpus Opere d'Arte di Danilo D'Antonio</title>
+    <title>Opere d'Arte di Danilo D'Antonio</title>
     <style>
         body {
             margin: 0;
@@ -34,11 +34,30 @@
 </head>
 <body>
 
-<div style="text-align: center; max-width: 900px; padding: 20px;">
+<div style="font-size: 42px; text-align: center; max-width: 900px; padding: 20px;">
 
-<a class="nonenone" href="1.html"><img src="rut.svg" width="70%"></a>
+<a class="none" href="1.html">
 
-<br><br><br><br><br><br>
+<strong>
+
+<span style="font-size: 69px;">R E P U B B L I C A</span>
+
+<br><br>
+
+aperta, libera, osmotica, praticata, vissuta<br>
+serena perché tutta auto-risolvente
+
+</strong>
+
+</a>
+
+<!--
+<a class="nonenone" href="1.html"><img src="rpblc.svg" width="80%" style="border: 1px solid black"></a>
+-->
+
+<br><br><br><br>
+
+</div>
 
 </body>
 </html>
