--- a/lab/repubblica/index_1.html
+++ b/lab/repubblica/index_1.html
@@ -12,7 +12,7 @@ p{font-size:1em;line-height:1.5;margin:0 0 3rem 0}
 .nav{text-align:center;font-size:1.4em}
 a{color:#000;text-decoration:none}
 a:hover{text-decoration:underline}
-.index{text-align:center;font-size:1.4em;font-weight:bold;margin-top:7rem;margin-bottom:1rem;display:block;}
+.index{text-align:center;font-size:1.4em;margin-top:7rem;margin-bottom:1rem;display:block;}
 .spacer{display:inline-block;width:4rem}
 </style>
 </head>
@@ -46,15 +46,25 @@ a:hover{text-decoration:underline}
 
 </p><p>
 
-continua a breve<br>col lavoro di oltre trent'anni
+...
 
 </p><p>
 
 </div>
 
-  <div class="index">
-<a href="../repita/camps/immo/prefa.html">D.P.R. 380/2001</a>
-  </div>
+<i>
+<div class="index" style="font-size: 22px;">
+<strong><a href="index.html">La REPUBBLICA di SENSO COMPIUTO</a></strong>
+<br>
+<span style="font-size: 18px;">
+di <a class="none" href="../hl_it.htm" target="dandan">Danilo D'Antonio</a>, <a class="none" href="../eulab/index.htm" target="eulab">Laboratorio Eudemonia</a>
+<br>
+<a class="none" href="mailto:dda@hyperlinker.org">e-mail</a>, <a class="none" href="mailto:danilo.dantonio@domicilio.online">PEC</a>, smart: (previo WSP) 339 5014947
+<br>
+<a class="none" href="dir_lic.html" target="diritti_licenza">Diritti d'Autore e Licenza d'Utilizzo</a>
+</span>
+</div>
+</i>
 
 </div>
 
