--- a/lab/repubblica/liberazione.html
+++ b/lab/repubblica/liberazione.html
@@ -75,16 +75,22 @@ D'un tratto, espugnata l'impenetrabile fortezza di coloro che, approfittando del
 
 In Italia, in Europa, nel mondo intero. I pollitici si dilegueranno tutti e potranno infine comparire persone che non comandano ma governano, che innanzitutto si occupino della cosa pubblica e rispettino la cosa privata. Percone che non si presentino in un consesso senza nemmeno conoscere i rudimenti del vivere collettivo, i principi d'una Società. Facendoci salvi dal caos.
 
-  </p><p>
-
-Danilo D'Antonio<br>
-grossista d'idee, intelligenza biologica<br>
-del Laboratorio Eudemonia
-
   </p>
 
+<br>
+
+<div style="font-size:1.2em; text-align:right">
+
+<a href="../hl_it.htm" target="dda">Danilo D'Antonio</a><br>
+grossista d'idee, intelligenza biologica<br>
+del <a href="../eulab/index.htm" target="eulab">Laboratorio Eudemonia</a>
+
+</div>
+
+<br>
+
   <div class="index">
-    <a href="index_1.html">index</a>
+    <a href="index_1.html">___ La REPUBBLICA di SENSO COMPIUTO ___</a>
   </div>
 
 </div>
