--- a/lab/repubblica/senso.html
+++ b/lab/repubblica/senso.html
@@ -81,16 +81,22 @@ L'Italia gode di una Res Publica la quale, appunto perché proprietà comune, pu
 
 Godendo di una Repubblica che tenga fede al suo significato, poggiando il potere legislativo non più sulla monolitica struttura di potere che resse imperatori, monarchi e duci, bensì su una dinamica struttura aperta ai cittadini, la stessa Reprivata sarà, sì, libera di svolgere la sua funzione ma non s'azzarderà più a fagocitare e sopraffare gli esseri umani ed il Pianeta. Facendo chiarezza ed uniti da un nuovo patto sociale ben concepito, da una Costituzione degna delle necessità individuali e collettive d'un popolo, non mancherà nulla a nessuno e nessuno più potrà schiacciare altri. Vivere bene, facendo le cose per bene, non solo è possibile ma, per degli esseri che tanto fanno vanto d'essere pensanti, un atto semplicemente naturale. Avanziamo dunque oggi. Siamo grandi.
 
-  </p><p>
-
-Danilo D'Antonio<br>
-grossista d'idee, intelligenza biologica<br>
-del Laboratorio Eudemonia
-
   </p>
 
+<br>
+
+<div style="font-size:1.2em; text-align:right">
+
+<a href="../hl_it.htm" target="dda">Danilo D'Antonio</a><br>
+grossista d'idee, intelligenza biologica<br>
+del <a href="../eulab/index.htm" target="eulab">Laboratorio Eudemonia</a>
+
+</div>
+
+<br>
+
   <div class="index">
-    <a href="index_1.html">index</a>
+    <a href="index_1.html">___ La REPUBBLICA di SENSO COMPIUTO ___</a>
   </div>
 
 </div>
