--- a/lab/repubblica/truffa.html
+++ b/lab/repubblica/truffa.html
@@ -45,16 +45,22 @@ E poiché il resto del mondo considera l'Italia e l'Europa un gran riferimento c
 
 Auguri dunque e buon lavoro!
 
-  </p><p>
-
-Danilo D'Antonio<br>
-grossista d'idee, intelligenza biologica<br>
-del Laboratorio Eudemonia
-
   </p>
 
+<br>
+
+<div style="font-size:1.2em; text-align:right">
+
+<a href="../hl_it.htm" target="dda">Danilo D'Antonio</a><br>
+grossista d'idee, intelligenza biologica<br>
+del <a href="../eulab/index.htm" target="eulab">Laboratorio Eudemonia</a>
+
+</div>
+
+<br>
+
   <div class="index">
-    <a href="index_1.html">index</a>
+    <a href="index_1.html">___ La REPUBBLICA di SENSO COMPIUTO ___</a>
   </div>
 
 </div>
