--- a/lab/repita/camps/immo/italia.html
+++ b/lab/repita/camps/immo/italia.html
@@ -105,9 +105,9 @@ Lettere al Presidente della Repubblica<br>
 </div>
 
 <div style="font-size: 18px;">
-email: dda@hyperlinker.org - PEC: danilo.dantonio@domicilio.online
+<a class="none" href="mailto:dda@hyperlinker.org">email</a>, <a class="none" href="mailto:danilo.dantonio@domicilio.online">PEC</a> & smart: (solo WSP) 339 5014947
 <br>
-smart: (solo WSP) 339 5014947
+<a class="none" href="dir_lic.html" target="diritti_licenza">Diritti d'Autore e Licenza d'Utilizzo</a>
 </div>
 </i>
 
