--- a/lab/repubblica/1.html
+++ b/lab/repubblica/1.html
@@ -23,7 +23,7 @@ a:hover{text-decoration:underline}
   <p>Si definisce Democrazia quell’ordinamento societario in cui il Popolo si erge a Sovrano e dà vita a una Repubblica: una comproprietà nazionale costituita da codici, enti e istituzioni, da beni, proprietà e risorse, da impieghi, poteri e redditi. Un patrimonio comune, economico, giuridico, politico, da curare solidalmente e godere paritariamente. In contemporanea, se quella specifica parte di res publica lo permette: come nel caso di un giardino pubblico. O susseguendosi l’un l’altro pro tempore: come necessita in un pubblico impiego, potere, ruolo. Per mantenere la proprietà del bene in capo al Popolo.</p>
 
   <div class="nav">
-    <a href="../repita/camps/immo/prefa.html">&lt; 0</a>
+    <a href="index.html">&lt; 0</a>
     <span class="spacer"></span>
     1
     <span class="spacer"></span>
