--- a/lab/repubblica/2.html
+++ b/lab/repubblica/2.html
@@ -19,7 +19,7 @@ a:hover{text-decoration:underline}
 
 <div class="box">
 
-  <p>Democrazia è società contrapposta alla tirannide: impero, monarchia o che altro. Nella tirannide il Popolo è sottomesso ai pochi che detengono perennemente la centralità. Nella Democrazia i cittadini possono accedere al nucleo della cellula societaria (la Repubblica) tramite un Istituto (come la Banca dei Pubblici Impieghi) che periodicamente la redistribuisce. Sempre mantenendo piena competenza, idoneità e preparazione. Chiunque può svolgere vita pubblica attiva e farsi costruttore del proprio destino. La società ne guadagna godendo di un'ampia visione, arricchita da ognuno, in grado di farle cogliere le opportunità e superare gli ostacoli.</p>
+  <p>Democrazia è società armoniosa contrapposta al conflittuale ammasso della tirannide: impero, monarchia o che altro. Nella tirannide il Popolo è sottomesso ai pochi che detengono perennemente la centralità ed ai loro prediletti. Nella Democrazia le persone possono accedere al nucleo della cellula societaria, la Repubblica, tramite un Istituto come la Banca dei Pubblici Impieghi, che periodicamente la redistribuisce secondo competenze, idoneità e preparazione. Chiunque può svolgere vita pubblica attiva e farsi costruttore del proprio destino. La società ne guadagna godendo di un'ampia visione, arricchita da ognuno, in grado di farle cogliere le opportunità e superare gli ostacoli.</p>
 
   <div class="nav">
     <a href="1.html">&lt; 1</a>
