--- a/lab/repubblica/3.html
+++ b/lab/repubblica/3.html
@@ -19,7 +19,7 @@ a:hover{text-decoration:underline}
 
 <div class="box">
 
-  <p>In sintesi: si vive in Democrazia se il Popolo gode di una Repubblica. Se è presente una Banca dei Pubblici Impieghi (nella quale chiunque possa iscriversi e prenotarsi per fornire il proprio contributo) che permetta il periodico, regolare rinnovo del personale gestente la cosa pubblica. Se questo Istituto non è vigente, tanto la "democrazia" che la "repubblica", pur dichiarate, pur sbandierate, sono fittizie. Trattasi di forme mantenute confuse, intermedie, spurie, da coloro che, godendo di indebiti privilegi, non vogliono rinunciarvi e si servono di ogni ente in loro possesso, in primis educativi ed informativi, per mantenere il Popolo inconsapevole e succube. Ed ora approfondiamo, procediamo.</p>
+  <p>In sintesi: si vive in Democrazia se il Popolo gode di una Repubblica. Se è presente una Banca dei Pubblici Impieghi (nella quale chiunque possa iscriversi e prenotarsi per fornire il proprio contributo) che permetta il periodico, regolare rinnovo del personale gestente la cosa pubblica. Se questo Istituto non è vigente, tanto la "democrazia" che la "repubblica", pur dichiarate, pur sbandierate, put vantate, sono fittizie. Trattasi di forme mantenute confuse, intermedie, spurie, da coloro che, godendo di indebiti privilegi, non vogliono rinunciarvi e si servono di ogni ente e mezzo in loro possesso, in primis quelli educativi ed informativi, per mantenere il Popolo inconsapevole e succube. Ed ora approfondiamo, procediamo.</p>
 
 <!--
 
