--- a/lab/repubblica/index.html
+++ b/lab/repubblica/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 
-<div style="font-size: 42px; text-align: center; max-width: 900px; padding: 20px;">
+<div style="font-size: 42px; text-align: center; max-width: 1200px; padding: 20px;">
 
 <a class="none" href="1.html">
 
@@ -44,8 +44,8 @@
 
 <br><br>
 
-aperta, libera, osmotica, praticata, vissuta<br>
-serena perché tutta auto-risolvente
+aperta, praticata, osmotica, vissuta<br>
+serena perché auto-risolvente
 
 </strong>
 
