--- a/lab/repubblica/republique.html
+++ b/lab/repubblica/republique.html
@@ -64,7 +64,7 @@ du Laboratorio Eudemonia
 <br>
 
   <div class="index">
-    <a href="index_1.html">___ La RÉPUBLIQUE de SENS ACHÈVEMENT ___</a>
+    <a href="index_1.html">___ La RÉPUBLIQUE du SENS ACCOMPLI ___</a>
   </div>
 
 </div>
