--- a/lab/index.html
+++ b/lab/index.html
@@ -40,6 +40,7 @@
             'sopruso-immobiliare.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/index.html',
             'repubblica-democrazia.hyperlinker.org': 'https://hyperlinker.org/repubblica/index.html',
             'republique.hyperlinker.org': 'https://hyperlinker.org/repubblica/republique.html',
+            'vive-la-republique.hyperlinker.org': 'https://hyperlinker.org/repubblica/republique.html',
         };
         if (redirectMap[hostname]) {
             window.location.replace(redirectMap[hostname]);
