--- a/lab/repubblica/republique.html
+++ b/lab/repubblica/republique.html
@@ -17,6 +17,8 @@ h2{font-size:2em;margin:1rem 0 4rem 0;padding-bottom:2rem;}
 p{font-size:1.2em;line-height:1.5;margin:0 0 3rem 0;}
 a{color:#000;text-decoration:none}
 a:hover{text-decoration:underline}
+.underline{color:#000;text-decoration:underline}
+.underline:hover{text-decoration:none}
 .index{text-align:center;font-size:1.4em;font-weight:bold;margin-top:5rem;margin-bottom:1rem;display:block;}
 .spacer{display:inline-block;width:4rem}
 </style>
@@ -47,7 +49,7 @@ En résumé : on vit en Démocratie si le Peuple jouit d'une République. S'il e
 
   </p><p>
 
-<a class="none" href="index_1.html">Et maintenant, approfondissons, poursuivons ...</a>
+<a class="underline" href="republique_1.html">Et maintenant, approfondissons, poursuivons ...</a>
   
   </p>
 
@@ -64,7 +66,7 @@ du Laboratorio Eudemonia
 <br>
 
   <div class="index">
-    <a href="index_1.html">___ La RÉPUBLIQUE du SENS ACCOMPLI ___</a>
+    <a href="republique_1.html">___ La RÉPUBLIQUE du SENS ACCOMPLI ___</a>
   </div>
 
 </div>
