--- a/lab/ars/pre_pre_index_it.htm
+++ b/lab/ars/pre_pre_index_it.htm
@@ -29,7 +29,7 @@
 
 <table bgcolor="white" width="100%" height="100%" cellspacing="77pt"><tr><td width="50%" align="left" valign="top">
 
-<font face="verdana" color="navy" size="3"><b>
+<font face="verdana" color="navy" size="4"><b>
 
 <div align="justify">
 
@@ -41,7 +41,7 @@ L'<i>Armonica Rotazione Sociale</i> è una forma organizzativa di base, dinamica 
 
 </td><td width="50%" align="left" valign="bottom">
 
-<font face="verdana" color="navy" size="3"><b>
+<font face="verdana" color="navy" size="4"><b>
 
 <div align="justify">
 
@@ -53,9 +53,9 @@ Luogo civico, economico e politico ideale per avviare una <i>Armonica Rotazione 
 
 </td></tr><tr><td width="100%" align="center" valign="top" colspan="2">
 
-<font face="verdana" color="navy" size="3"><b>
+<font face="verdana" color="navy" size="4"><b>
 
-<a class="ars" href="pre_index_it.htm">IMPIEGO PUBBLICO DEMOCRATICO</a>
+<a class="ars" href="pre_index_it.htm">_ IMPIEGO PUBBLICO DEMOCRATICO _</a>
 
 <br><br>
 
@@ -63,21 +63,25 @@ Luogo civico, economico e politico ideale per avviare una <i>Armonica Rotazione 
 
 <br><br><br><br>
 
+<font size="5">
+
 Per un'ampia visione d'insieme dell'Armonica Rotazione Sociale:
 
-<br><br><br>
+<br><br>
 
-<a class="ars" href="../change/la_metamorfosi_0.htm">La metamorfosi</a>
+<a class="ars" href="../change/la_metamorfosi_0.htm">_ La metamorfosi _</a>
 
  <img src="blank.gif"> # <img src="blank.gif"> 
 
-<a class="ars" href="cosdif.htm">Le parti e l'intero</a>
+<a class="ars" href="cosdif.htm">_ Le parti e l'intero _</a>
+
+</font>
 
 </b></font>
 
 <br><br><br><br><br>
 
-<center><FONT face="verdana" SIZE="1"><b>
+<center><FONT face="verdana" SIZE="2"><b>
 <a class="lightlinkz" HREF="index.htm">A R M O N I C A <img src="blank.gif" border="0"> R O T A Z I O N E <img src="blank.gif" border="0"> S O C I A L E</a><br>
 <a class="lightlinkz" HREF="legal_it.htm">Copyright & ServiceMark</a> <a class="lightlinkz" href="../eulab/indirizzi.htm" target="eulab">Laboratorio Eudemonia</a>. <a class="lightlinkz" HREF="legal_it.htm">Alcuni diritti concessi</a><br>
 <a class="lightlinkz" HREF="storia.htm">Sito Web attivo fin dal</a> <a class="lightlinkz" HREF="../tec/index.htm">29</a> - <a class="lightlinkz" href="../index.htm" target="hyperlinker">WebWorks by HyperLinker</a>
